 + Added checks for permissions and removal of new/edit/cut/copy/paste/delete icons
 + Added posibility to hide sidebar objects if they are empty though object configuration
 # Fixed spacing problem for disabled tabs
 # Hidden several tabs if they do not have content
 # Hidden static data structures from the list of content elements that can be created through new content element wizard

2007-06-21  Dmitry Dulepov  <dmitry@typo3.org>

 + DS title for static data structures can use 'LLL:' translation
 + Static DSes now can specify default file references
 # Fix: wrong element position if element is inserted using old page module
 # Fix: unnecessary loop while generating TS during mapping
 # Fixed bug 5253: sort FCEs in wizard
 # Fixed bug 5679: "Create new Template Object" stopped working in 1.3.1
 # Fixed bug 5692: Manual sorting of FCEs displayed in the New Content Wizard.

2007-05-09  Dmitry Dulepov  <dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.1

2007-02-27  Dmitry Dulepov  <dmitry@typo3.org>

 # Changed hook parameter names in class.tx_templavoila_access.php

2007-03-24  Kasper Skaarhoej
 # Fixed bug that the Page module would not show page structure if a Template Object value was set but not the Data Structure

2007-02-20  Dmitry Dulepov  <dmitry@typo3.org>

 # Fix: wrong check for null in class.tx_templavoila_tcemain.php
 + Added access control for creation, modification and deletion of FCEs inside TCEmain (using hooks) and for TCEForms (requires hook in core!)
 + Added icon to mod1 to show when FCE editing is disabled

2007-02-19  Dmitry Dulepov  <dmitry@typo3.org>

 # Fixed wrong character encoding in mod1 if forceCharset is empty
 # Fixed bug 4967: Disallowed DS/TO are available in Pagewizard
 # Fixed bug 4975: SQL errors with Templavoila/DBAL/PostgreSQL: TV Control Center: Show Details
 # Fixed bug 4997: SQL error with Templavoila/DBAL/PostgreSQL: Editing templates

2007-02-15  Dmitry Dulepov  <dmitry@typo3.org>
