@@ -7,6 +7,7 @@
  # Fixed spacing problem for disabled tabs
  # Hidden several tabs if they do not have content
  # Hidden static data structures from the list of content elements that can be created through new content element wizard
+ # Fixed: $LANG sometimes does not exist and causes failures in class.tx_templavoila_access.php
 
 2007-06-21  Dmitry Dulepov  <dmitry@typo3.org>
 
